css/index.css
body {
    font-family: Arial;
    margin: 0px;   
}

/* Navigation bar */
.divNavRow {
    align-items: baseline; /* align text */
    background-image: url('img/bgNavigationBar.jpg');
    background-size: contain;
    border-bottom: 1px solid black;
     
    display: flex;
    font-weight: bold;
    justify-content: center;
    padding: 0px 12.5%;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 2;
}

#divName {
    color: white;
    font-size: 30px;
    padding: 0 1%;
    text-align: center;
    white-space: nowrap; /* prevent name being wrapped */
    width: 23%;
    justify-content: center;
    display: flex;

}

.divNavCol {   
    color: #7a7a7a;
    font-size: 18px;
    padding: 50px 1%;
    text-align: center;
    width: 14%; 
}

.divNavRow .divNavCol.divHover:hover, .divNavRow .divSelected {
    background: #0f0f0f;
    color: white;
    cursor: pointer;
    opacity: 0.5;
    text-decoration: underline;  
}

.divNavRow .divSelected {
    cursor: auto;
}

.sidebar {
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 4;
    top: 0;
    left: 0;
    background-color: #111;
    overflow-x: hidden;
    transition: 0.5s;
    padding-top: 60px;
  }
  
  .sidebar a, .sidebar div {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 25px;
    color: #818181;
    display: block;
    transition: 0.3s; 
  }
  
  .sidebar a:hover, .sidebar div:hover {
    color: #f1f1f1;
    text-decoration: underline; 
    cursor: pointer;
  }
  
  .sidebar .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
  }
  
  .openbtn {
    font-size: 3em;
    cursor: pointer;
    background-color: transparent;
    color: white;
    border: none;
    position: fixed;
    z-index: 3;
    top: 0;
    margin: 1.4rem 0 0 6%
  }
  
  .openbtn:hover {
    color: #818181;
  }

/* Main Content */
.divMainBody {
    background-color: silver;
    height: 700px;
    padding: 0px 15%;
    margin-top: 128px;
}

.divMainBody .divContentBody {  
    display: none;
    width: 100%;
}

/* Footer */
.divFooter {
    align-content: center;
    background-image: linear-gradient(#121212, #4a4a4a);
    border-top: 1px solid black;
    display: flex;
    height: 100px;
    justify-content: center;
    padding: 0px 15%;
}

.divFooter div {
    position: relative;
}

.divFooter .ftrIconText {
    bottom: 10px;
    color: white;
    font-size: 15px;
    font-weight: bold;
    left: 0px;
    position: absolute;
    right: 0px;
    text-align: center;
    visibility: hidden;
    white-space: nowrap;
}

.divFooter .ftrIcon {
    border-radius: 24px;
    cursor: pointer;
    height: 50px;
    margin: 1rem 1.8rem;
    width: 50px;
}

.divFooter div:hover .ftrIconText {
    visibility: visible;
}

.divFooter div:hover .ftrIcon {
    box-shadow: 0px 0px 15px black;
}


  

